# shark-quant-trader

./: .env.example  .gitignore  INVESTOR_PITCH.md  PHASE1_COMPLETE.md  PRD_Intelligent_Trading_System_v2.md  README.md  Tech_Design_Document.md  code_review_log.md  demo_phase1.py  demo_phase2.py  demo_phase3.py  demo_phase4.py  demo_phase5.py  demo_phase6.py  main.py  pyproject.toml  run_backtest.sh  shark-quant-trader-KnowledgeQA.md  verify_carry.py
.qoder/repowiki/en/content/: Backtesting and Validation.md  Configuration and Deployment.md  Data Management.md  Development Guidelines.md  Execution and Compliance.md  Monitoring and Alerting.md  Risk Management System.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
config/: strategy.yaml
src/alerts/: __init__.py  manager.py
src/backtest/: __init__.py  engine.py
src/data/: __init__.py  provider.py
src/execution/: __init__.py  compliance.py  order_manager.py
src/factors/: __init__.py  calculator.py  carry.py  momentum.py  rotation.py
src/live_trading/: __init__.py  brokers.py  models.py  monitor.py  order_manager.py  transition.py
src/ml/: __init__.py  cpcv.py  evaluator.py  features.py  fusion.py  lifecycle.py  trainer.py
src/models/: __init__.py  domain.py
src/nlp/: __init__.py  cot.py  integrator.py  sentiment.py
src/paper_trading/: __init__.py  engine.py  gates.py  models.py  monitor.py
src/portfolio/: __init__.py  manager.py  optimizer.py
src/risk/: __init__.py  correlation.py  manager.py  reentry.py
src/signals/: __init__.py  generator.py
src/state/: __init__.py  manager.py
src/stress/: __init__.py  tester.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  test_factors.py  test_risk.py
(+46 files in other folders)
