[project]
name = "shark-quant-trader"
version = "0.1.0"
description = "Intelligent Trading Decision System"
authors = [
    {name = "AI Quant Developer"}
]
requires-python = "^3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pandas-ta>=0.3.14b0",
    "backtrader>=1.9.76.123",
    "riskfolio-lib>=5.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "newsapi-python>=0.2.7",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "html2text>=2020.1.16",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "apprise>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "yfinance>=0.2.18",
    "polygon-api-client>=1.14.0",
    "requests>=2.31.0",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "optuna>=3.3.0",
    "shap>=0.42.0",
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "scipy>=1.11.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]
extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
